<resources>
    <!-- Strings used for logistics -->
    <string name="app_name">Monkey Economy Bureau</string>
    <string name="app_subtitle">Version 36 of Bloons TD 6</string>

    <!-- Page names -->
    <string name="welcome_page">Welcome</string>
    <string name="cost_calculator_page">Cost Calculator</string>
    <string name="affordability_calculator_page">Affordability Calculator</string>
    <string name="saved_defenses_page">Saved Defenses</string>
    <string name="sellback_calculator_page">Sellback Calculator</string>
    <string name="hearts_lost_calculator_page">Hearts Lost Calculator</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Useless strings -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Heading Strings -->
    <string name="app_heading">MONKEY ECONOMY BUREAU</string>
    <string name="page_heading_1.1">Cost\nCalculator</string>
    <string name="page_heading_2">Calculator</string>
    <string name="page_heading_1.2">Affordability</string>
    <string name="page_heading_template">Page\nHeader</string>

    <!-- Button Strings -->
    <string name="menu_button">MENU</string>
    <string name="help_button">Help</string>
    <string name="add_same_tower_button">Add Same Tower</string>
    <string name="add_different_tower_button">Add Different Tower</string>
    <string name="add_tower_button">Add Tower</string>
    <string name="mk">Set Monkey Knowledge</string>
    <string name="target_button_label">Target  </string>
    <string name="x_button">X</string>
    <string name="enter_button_label">Enter</string>
    <string name="clear_towers_button_label">Clear towers</string>
    <string name="compare_button_label">Compare with Defense</string>
    <string name="save_defense_button_label">Save Defense</string>
    <string name="load_defense_button_label">Load Defense</string>
    <string name="set_as_current_button">Set as Current</string>
    <string name="sell_button">Sell</string>
    <string name="buy_button">Buy</string>
    <string name="rebuy_button">Rebuy</string>
    <string name="enter_sellback_data">Enter sellback data</string>
    <string name="add_bloon_button">ADD BLOON</string>
    <string name="clear_bloons_button">CLEAR BLOONS</string>

    <!-- Switch Strings -->
    <string name="consideration_switch_label">Consider list of bloons / round range</string>
    <string name="round_type_label">Normal Rounds / Alternate Bloons Rounds</string>

    <!-- Defence section -->
    <string name="first_tower">Dart 1  </string>
    <string name="tower_selection">Select Tower</string>
    <string name="path_1">Top</string>
    <string name="path_2">Mid</string>
    <string name="path_3">Low</string>

    <!-- Image section -->
    <string name="dart_symbol">A symbol for dart monkeys</string>

    <!-- Dropdowns -->

    <!-- Defence dropdown -->
    <string-array name="towers">
        <item>Select Tower</item>
        <item>Dart Monkey</item>
        <item>Boomerang Monkey</item>
        <item>Bomb Shooter</item>
        <item>Tack Shooter</item>
        <item>Ice Monkey</item>
        <item>Glue Gunner</item>
        <item>Sniper Monkey</item>
        <item>Monkey Sub</item>
        <item>Monkey Buccaneer</item>
        <item>Monkey Ace</item>
        <item>Heli Pilot</item>
        <item>Mortar Monkey</item>
        <item>Dartling Gunner</item>
        <item>Wizard Monkey</item>
        <item>Super Monkey</item>
        <item>Ninja Monkey</item>
        <item>Alchemist</item>
        <item>Druid</item>
        <item>Banana Farm</item>
        <item>Spike Factory</item>
        <item>Monkey Village</item>
        <item>Engineer Monkey</item>
        <item>Beast Handler</item>
    </string-array>

    <!-- Upgrade dropdowns -->
    <string-array name="upgrades">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <!-- Difficulty dropdown -->
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Impoppable</item>
    </string-array>

    <!-- Cash multiplier dropdown -->
    <string-array name="cash_multipliers">
        <item>Half Cash</item>
        <item>Normal Cash</item>
        <item>Double Cash</item>
    </string-array>

    <!-- Round type dropdown -->
    <string-array name="round_types">
        <item>Normal Rounds</item>
        <item>Alternate Bloons Rounds</item>
    </string-array>

    <!-- Bloon type dropdown -->
    <string-array name="bloon_type">
        <item>Select Bloon type</item>
        <item>Bloon</item>
        <item>Blimp</item>
    </string-array>

    <!-- Normal Bloons dropdown -->
    <string-array name="normal_bloons">
        <item>Select Bloon</item>
        <item>Red Bloon</item>
        <item>Blue Bloon</item>
        <item>Green Bloon</item>
        <item>Yellow Bloon</item>
        <item>Pink Bloon</item>
        <item>Black Bloon</item>
        <item>White Bloon</item>
        <item>Purple Bloon</item>
        <item>Zebra Bloon</item>
        <item>Lead Bloon</item>
        <item>Rainbow Bloon</item>
        <item>Ceramic Bloon</item>
    </string-array>

    <!-- Blimps dropdown -->
    <string-array name="blimps">
        <item>Select Blimp</item>
        <item>MOAB</item>
        <item>BFB</item>
        <item>ZOMG</item>
        <item>DDT</item>
        <item>BAD</item>
    </string-array>

    <string-array name="RBE_bloons">
        <item>Select Bloon</item>
        <item>Red Bloon</item>
        <item>Blue Bloon</item>
        <item>Green Bloon</item>
        <item>Yellow Bloon</item>
        <item>Pink Bloon</item>
        <item>Black Bloon</item>
        <item>White Bloon</item>
        <item>Purple Bloon</item>
        <item>Zebra Bloon</item>
        <item>Lead Bloon</item>
        <item>Rainbow Bloon</item>
        <item>Ceramic Bloon</item>
        <item>MOAB</item>
        <item>BFB</item>
        <item>ZOMG</item>
        <item>DDT</item>
        <item>BAD</item>
        <item>Rock Bloon</item>
    </string-array>

    <!-- Boss dropdown -->
    <string-array name="bosses">
        <item>Select Boss</item>
        <item>Bloonarius</item>
        <item>Lych</item>
        <item>Vortex</item>
        <item>Dreadbloon</item>
    </string-array>

    <!-- Extra dropdown -->
    <string-array name="extras">
        <item>Select Extra</item>
        <item>Golden Bloon</item>
        <item>Lych Soul</item>
        <item>Rock Bloon</item>
    </string-array>

    <!-- Label section -->
    <string name="money_count_label">Money count</string>
    <string name="current_round_label">Current Round</string>
    <string name="target_round_label">Target Round</string>
    <string name="target_tower_label">Target Tower</string>
    <string name="database_test_label">Enter Dart Monkey Upgrade</string>
    <string name="affordability_calculator_label">Affordability Calculator</string>
    <string name="cost_calculator_label">Cost Calculator</string>
    <string name="start_round_label">Start Round</string>
    <string name="end_round_label">End Round</string>
    <string name="my_cash_label">My cash</string>
    <string name="fortified_label">Fortified</string>
    <string name="difficulty_label">Difficulty</string>

    <!-- Content Description -->
    <string name="difficulty_description">Choose difficulty</string>

    <!-- Long sections of text -->
    <string name="welcome_message">Welcome to the Monkey Economy Bureau\n\nThis app features a Cost Calculator which you can use to calculate the cost of your defense.\n\nIt also features an Affordability Calculator which you can use to figure out the round you will afford your defense\n\nThis app allows you to save your defense and view them at any time.\n\nIt features two additional, minor calculators: the Sellback Calculator and the Hearts Lost Calculator\n\nSelect the Options Button (3 vertical dots) to begin</string>
    <string name="round_cash_message">Cash gained from entered round range</string>
    <string name="afford_defense_message">When will I afford my defense?</string>
    <string name="defense_cost_message">Defense cost from the Cost Calculator</string>
    <string name="defense_sellback_message">Selling price of current defense</string>

    <!-- Outputs -->
    <string name="default_price">$0</string>
    <string name="sell_count">Sells: 0</string>
    <string name="rebuy_count">Re-buys: 0</string>
    <string name="remaining_cash_label">Remaining cash</string>
    <string name="sellback_tower_label">Tower to sell and rebuy</string>
    <string name="starting_cash_label">Starting cash</string>
    <string name="upgrades_label">Upgrades</string>

    <!-- Mischellaneous section -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_button">Test</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>