<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/welcome_page"
        android:orderInCategory="1"
        android:title="@string/welcome_page" />
    <item
        android:id="@+id/cost_calculator_page"
        android:orderInCategory="2"
        android:icon="@drawable/cost_calculator_symbol"
        android:title="@string/cost_calculator_page" />
    <item
        android:id="@+id/affordability_calculator_page"
        android:orderInCategory="3"
        android:title="@string/affordability_calculator_page" />
    <item
            android:id="@+id/saved_defenses_page"
            android:orderInCategory="4"
            android:title="@string/saved_defenses_page" />
    <item
            android:id="@+id/sellback_calculator_page"
            android:orderInCategory="5"
            android:title="@string/sellback_calculator_page" />
    <item
            android:id="@+id/hearts_lost_calculator_page"
            android:orderInCategory="6"
            android:title="@string/hearts_lost_calculator_page" />
</menu>