<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/top_path"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middle_path"
        app:layout_constraintStart_toEndOf="@id/tower_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tower_symbol"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/top_path"
        app:layout_constraintStart_toEndOf="@+id/tower_count"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/middle_path"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_path"
        app:layout_constraintStart_toEndOf="@+id/top_path"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <Spinner
        android:id="@+id/bottom_path"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/remove_tower_button"
        app:layout_constraintStart_toEndOf="@+id/middle_path"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remove_tower_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dialog"
        android:backgroundTint="@color/red"
        android:text="@string/x_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bottom_path"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/tower_count"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/one"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tower_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>