<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickMenu"
    tools:context=".CostCalculator">

    <View
        android:id="@+id/background1"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="#44536E"
        app:layout_constraintBottom_toTopOf="@+id/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/background3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#44536E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background2" />

    <View
        android:id="@+id/background2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#86A1C1"
        app:layout_constraintBottom_toTopOf="@+id/background3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background1" />

    <TextView
        android:id="@+id/app_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layerType="none"
        android:text="@string/app_heading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/background1"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        app:layout_constraintStart_toStartOf="@id/background1"
        app:layout_constraintTop_toTopOf="@id/background1" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:background="@drawable/green_rectangle_button_template"
        android:contentDescription="@string/menu_button"
        android:fontFamily="serif-monospace"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onClickMenu"
        android:text="@string/menu_button"
        android:textColor="#000000"
        android:textSize="20sp"
        android:theme="@style/GreenButton"
        app:layout_constraintBottom_toBottomOf="@id/background1"
        app:layout_constraintEnd_toEndOf="@id/background1"
        app:layout_constraintStart_toEndOf="@id/app_header"
        app:layout_constraintTop_toTopOf="@id/background1"
        app:strokeColor="#000000" />

    <TextView
        android:id="@+id/page_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="casual"
        android:text="@string/page_heading_1.1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/page_header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background2" />

    <TextView
        android:id="@+id/page_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="casual"
        android:text="@string/page_heading_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_header1" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cyan_circle_button_template"
        android:fontFamily="serif-monospace"
        android:text="@string/help_button"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/background2"
        app:layout_constraintEnd_toStartOf="@+id/page_header2"
        app:layout_constraintStart_toStartOf="@+id/background2"
        app:layout_constraintTop_toTopOf="@+id/background2" />

    <View
        android:id="@+id/background_view"
        android:layout_width="371dp"
        android:layout_height="220dp"
        android:layout_marginTop="15dp"
        android:background="#B9D8F1"
        app:layout_constraintBottom_toTopOf="@+id/add_different_tower_button"
        app:layout_constraintEnd_toEndOf="@+id/background3"
        app:layout_constraintStart_toStartOf="@+id/background3"
        app:layout_constraintTop_toTopOf="@+id/background3" />

    <ImageView
        android:id="@+id/target_tower_header"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dart_monkey_symbol"
        android:contentDescription="@string/dart_symbol"
        android:text="@string/first_tower"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/target_tower_dropdown"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view" />

    <View
        android:id="@+id/target_tower_dropdown_background"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/target_tower_dropdown"
        app:layout_constraintEnd_toEndOf="@+id/target_tower_dropdown"
        app:layout_constraintStart_toStartOf="@+id/target_tower_dropdown"
        app:layout_constraintTop_toTopOf="@+id/target_tower_dropdown" />

    <View
        android:id="@+id/difficulty_dropdown_background"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/difficulty_dropdown"
        app:layout_constraintEnd_toEndOf="@+id/difficulty_dropdown"
        app:layout_constraintStart_toStartOf="@+id/difficulty_dropdown"
        app:layout_constraintTop_toTopOf="@+id/difficulty_dropdown" />

    <Spinner
        android:id="@+id/target_tower_dropdown"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/tower_selection"
        app:layout_constraintBottom_toTopOf="@+id/add_same_tower_button"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintStart_toEndOf="@+id/target_tower_header"
        app:layout_constraintTop_toTopOf="@+id/background_view" />

    <Spinner
        android:id="@+id/difficulty_dropdown"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/tower_selection"
        app:layout_constraintEnd_toStartOf="@+id/set_monkey_knowledge_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_view" />

    <Spinner
        android:id="@+id/top_path"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_1"
        app:layout_constraintBottom_toTopOf="@+id/add_same_tower_button"
        app:layout_constraintEnd_toStartOf="@+id/middle_path"
        app:layout_constraintStart_toEndOf="@+id/tower_tab_button"
        app:layout_constraintTop_toBottomOf="@+id/target_tower_dropdown" />

    <Spinner
        android:id="@+id/middle_path"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_2"
        app:layout_constraintBottom_toTopOf="@+id/add_same_tower_button"
        app:layout_constraintEnd_toStartOf="@+id/bottom_path"
        app:layout_constraintStart_toEndOf="@+id/top_path"
        app:layout_constraintTop_toBottomOf="@+id/target_tower_dropdown" />

    <Spinner
        android:id="@+id/bottom_path"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:background="@drawable/spinner_template"
        android:contentDescription="@string/path_3"
        app:layout_constraintBottom_toTopOf="@+id/add_same_tower_button"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintStart_toEndOf="@+id/middle_path"
        app:layout_constraintTop_toBottomOf="@+id/target_tower_dropdown" />

    <Button
        android:id="@+id/tower_tab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_down_button"
        android:fontFamily="serif-monospace"
        android:text="@string/first_tower"
        app:layout_constraintBottom_toTopOf="@+id/add_same_tower_button"
        app:layout_constraintEnd_toStartOf="@id/top_path"
        app:layout_constraintStart_toStartOf="@id/background_view"
        app:layout_constraintTop_toBottomOf="@+id/target_tower_header" />

    <Button
        android:id="@+id/add_same_tower_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/green_rectangle_button_template"
        android:contentDescription="@string/add_same_tower_button"
        android:fontFamily="serif-monospace"
        android:text="@string/add_same_tower_button"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="@id/background_view"
        app:layout_constraintStart_toStartOf="@id/background_view"
        app:layout_constraintTop_toBottomOf="@+id/target_tower_dropdown" />

    <Button
        android:id="@+id/add_different_tower_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_rectangle_button_template"
        android:contentDescription="@string/add_same_tower_button"
        android:fontFamily="serif-monospace"
        android:text="@string/add_different_tower_button"
        app:layout_constraintEnd_toEndOf="@id/background_view"
        app:layout_constraintStart_toStartOf="@id/background_view"
        app:layout_constraintTop_toBottomOf="@+id/background_view" />

    <Button
        android:id="@+id/set_monkey_knowledge_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/tan_rectangle_button_template"
        android:contentDescription="@string/mk"
        android:fontFamily="serif-monospace"
        android:text="@string/mk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficulty_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/background_view" />

    <View
        android:id="@+id/final_price_view"
        android:layout_width="371dp"
        android:layout_height="90dp"
        android:layout_marginBottom="15dp"
        android:background="#B9D8F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/final_price"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:text="@string/default_price"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/final_price_view"
        app:layout_constraintEnd_toEndOf="@+id/final_price_view"
        app:layout_constraintStart_toStartOf="@+id/final_price_view"
        app:layout_constraintTop_toTopOf="@+id/final_price_view" />

    <ImageView
        android:id="@+id/cost_calculator_symbol"
        android:layout_width="96dp"
        android:layout_height="120dp"
        android:src="@drawable/cost_calculator_symbol"
        app:layout_constraintBottom_toTopOf="@+id/background3"
        app:layout_constraintEnd_toEndOf="@+id/background2"
        app:layout_constraintStart_toEndOf="@+id/page_header2"
        app:layout_constraintTop_toTopOf="@+id/background2"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="58dp" />

</androidx.constraintlayout.widget.ConstraintLayout>